Add support to fetch an `ENExposureConfiguration` object
Closes: #29
